use redux to fix light and dark modes

--- a/src/Components/ComponentsCss/ConversationsCss.css
+++ b/src/Components/ComponentsCss/ConversationsCss.css
@@ -1,6 +1,5 @@
 .Conversations{
     margin-top: 15px;
-    background-color: #d4d4dc;
     margin-left: 12%;
     width: 80%;
     height: 75%;
